add ros2/create_autonomy submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ros1/create_autonomy"]
 	path = ros1/create_autonomy
 	url = https://github.com/youtalk/create_autonomy.git
+[submodule "ros2/create_autonomy"]
+	path = ros2/create_autonomy
+	url = https://github.com/youtalk/create_autonomy.git
