--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ plugins:
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
 exclude:
+  - README.org
   - Gemfile
   - Gemfile.lock
   - ros1
