--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
           command: |
             apt-get update -qq
             source /opt/ros/dashing/setup.bash
+            mkdir ~/ros
             ln -s ros2 ~/ros/src
             cd ~/ros
             rosdep install --from-paths . --ignore-src -y
@@ -17,4 +18,3 @@ jobs:
           name: Build
           command: |
             colcon build
-    working_directory: ~/ros
