run also on crystal

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,30 @@ jobs:
             cd ~/ros
             colcon build
 
+  crystal:
+    docker:
+      - image: ros:crystal
+    steps:
+      - checkout
+      - run:
+          name: Set Up Container
+          command: |
+            apt-get update -qq
+            source /opt/ros/crystal/setup.bash
+            mkdir ~/ros
+            ln -s ~/project/ros2 ~/ros/src
+            cd ~/ros
+            rosdep install --from-paths . --ignore-src -y
+      - run:
+          name: Build
+          command: |
+            source /opt/ros/crystal/setup.bash
+            cd ~/ros
+            colcon build
+
 workflows:
   version: 2
   ros_build:
     jobs:
+      - crystal
       - dashing
