--- a/ros2/hello_world/CMakeLists.txt
+++ b/ros2/hello_world/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_CXX_STANDARD 14)
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(rclcpp_components REQUIRED)
+if($ENV{ROS_DISTRO} STREQUAL dashing)
+  find_package(rclcpp_components REQUIRED)
+endif()
 find_package(hello_world_msgs REQUIRED)
 
 # ビルド設定の便利関数
@@ -34,30 +36,32 @@ custom_executable(set_and_get_parameters)
 include_directories(include)
 
 # 共有ライブラリの生成
-add_library(talker_component SHARED
-  src/talker_component.cpp)
-target_compile_definitions(talker_component
-  PRIVATE "COMPOSITION_BUILDING_DLL")
-ament_target_dependencies(talker_component
-  "rclcpp"
-  "rclcpp_components"
-  "hello_world_msgs")
-# クラスローダーへの共有ライブラリの登録
-rclcpp_components_register_nodes(talker_component
-  "hell_world::TalkerComponent")
+if($ENV{ROS_DISTRO} STREQUAL dashing)
+  add_library(talker_component SHARED
+    src/talker_component.cpp)
+  target_compile_definitions(talker_component
+    PRIVATE "COMPOSITION_BUILDING_DLL")
+  ament_target_dependencies(talker_component
+    "rclcpp"
+    "rclcpp_components"
+    "hello_world_msgs")
+  # クラスローダーへの共有ライブラリの登録
+  rclcpp_components_register_nodes(talker_component
+    "hell_world::TalkerComponent")
 
-# 共有ライブラリの生成
-add_library(listener_component SHARED
-  src/listener_component.cpp)
-target_compile_definitions(listener_component
-  PRIVATE "COMPOSITION_BUILDING_DLL")
-ament_target_dependencies(listener_component
-  "rclcpp"
-  "rclcpp_components"
-  "hello_world_msgs")
-# クラスローダーへの共有ライブラリの登録
-rclcpp_components_register_nodes(listener_component
-  "hello_world::ListenerComponent")
+  # 共有ライブラリの生成
+  add_library(listener_component SHARED
+    src/listener_component.cpp)
+  target_compile_definitions(listener_component
+    PRIVATE "COMPOSITION_BUILDING_DLL")
+  ament_target_dependencies(listener_component
+    "rclcpp"
+    "rclcpp_components"
+    "hello_world_msgs")
+  # クラスローダーへの共有ライブラリの登録
+  rclcpp_components_register_nodes(listener_component
+    "hello_world::ListenerComponent")
+endif()
 
 install(DIRECTORY
     launch
