--- a/ros2/hello_world/package.xml
+++ b/ros2/hello_world/package.xml
@@ -12,11 +12,11 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>rclcpp</build_depend>
-  <build_depend>rclcpp_components</build_depend>
+  <build_depend condition="$ROS_DISTRO == dashing">rclcpp_components</build_depend>
   <build_depend>hello_world_msgs</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
-  <exec_depend>rclcpp_components</exec_depend>
+  <exec_depend condition="$ROS_DISTRO == dashing">rclcpp_components</exec_depend>
   <exec_depend>hello_world_msgs</exec_depend>
   <exec_depend>launch_ros</exec_depend>
 
