--- a/ros2/hello_world/CMakeLists.txt
+++ b/ros2/hello_world/CMakeLists.txt
@@ -67,6 +67,11 @@ if($ENV{ROS_DISTRO} STREQUAL dashing)
     "hello_world::ListenerComponent")
 endif()
 
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
 install(DIRECTORY
     launch
     DESTINATION share/${PROJECT_NAME}/
