--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,28 @@ jobs:
             cd ~/ros
             colcon build
 
+  noetic:
+    docker:
+      - image: ros:noetic
+    steps:
+      - checkout
+      - run:
+          name: Set Up Container
+          command: |
+            apt-get update -qq
+            apt-get install -y python-catkin-tools
+            source /opt/ros/noetic/setup.bash
+            mkdir ~/ros
+            ln -s ~/project/ros1 ~/ros/src
+            cd ~/ros
+            rosdep install --from-paths . --ignore-src -y
+      - run:
+          name: Build
+          command: |
+            source /opt/ros/noetic/setup.bash
+            cd ~/ros
+            catkin build
+
   melodic:
     docker:
       - image: ros:melodic
@@ -110,6 +132,8 @@ workflows:
   version: 2
   ros_build:
     jobs:
+      - foxy
       - eloquent
       - dashing
+      - noetic
       - melodic
