change to python3-catkin-tools

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ jobs:
           name: Set Up Container
           command: |
             apt-get update -qq
-            apt-get install -y python-catkin-tools
+            apt-get install -y python3-catkin-tools
             source /opt/ros/noetic/setup.bash
             mkdir ~/ros
             ln -s ~/project/ros1 ~/ros/src
