--- a/ros2/examples_rclpy/examples_rclpy_actions/package.xml
+++ b/ros2/examples_rclpy/examples_rclpy_actions/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>examples_rclpy_minimal_action_server</name>
+  <name>examples_rclpy_actions</name>
   <version>0.6.3</version>
   <description>Examples of action servers/clients using rclpy.</description>
 
