--- a/ros2/fibonacci/CMakeLists.txt
+++ b/ros2/fibonacci/CMakeLists.txt
@@ -7,13 +7,15 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
+find_package(hello_world_msgs REQUIRED)
 
 # ビルド設定の便利関数
 function(custom_executable target)
   add_executable(${target} src/${target}.cpp)
   ament_target_dependencies(${target}
     "rclcpp"
-    "rclcpp_action")
+    "rclcpp_action"
+    "hello_world_msgs")
   install(TARGETS ${target}
     DESTINATION lib)
 endfunction()
