--- a/src/open_manipulator_x_moveit_config/package.xml
+++ b/src/open_manipulator_x_moveit_config/package.xml
@@ -34,7 +34,7 @@
   <exec_depend>moveit_configs_utils</exec_depend>
   <exec_depend>moveit_ros_move_group</exec_depend>
   <exec_depend>moveit_ros_visualization</exec_depend>
-  <exec_depend>moveit_ros_warehouse</exec_depend>
+  <!-- <exec_depend>moveit_ros_warehouse</exec_depend> -->
   <exec_depend>moveit_setup_assistant</exec_depend>
   <exec_depend>open_manipulator_x_description</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
@@ -42,7 +42,7 @@
   <exec_depend>rviz_common</exec_depend>
   <exec_depend>rviz_default_plugins</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
-  <exec_depend>warehouse_ros_mongo</exec_depend>
+  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->
   <exec_depend>xacro</exec_depend>
 
 
