--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dynamixel_hardware_examples"]
 	path = src/dynamixel_hardware_examples
 	url = https://github.com/dynamixel-community/dynamixel_hardware_examples.git
+[submodule "src/example_interfaces"]
+	path = src/example_interfaces
+	url = https://github.com/ros2/example_interfaces.git
