--- a/src/ros2_practice/CMakeLists.txt
+++ b/src/ros2_practice/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 project(ros2_practice)
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
+set(CMAKE_CXX_STANDARD 17)
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -14,14 +12,16 @@ find_package(image_transport REQUIRED)
 find_package(OpenCV REQUIRED COMPONENTS highgui imgproc objdetect)
 
 add_executable(face_detection src/face_detection.cpp)
+ament_target_dependencies(face_detection
+  "cv_bridge"
+  "image_transport"
+  "rclcpp"
+  "sensor_msgs"
+)
 target_link_libraries(face_detection
-  cv_bridge::cv_bridge
-  image_transport::image_transport
   opencv_highgui
   opencv_imgproc
   opencv_objdetect
-  rclcpp::rclcpp
-  "${sensor_msgs_TARGETS}"
 )
 install(TARGETS
   face_detection
