--- a/src/ros2_practice/CMakeLists.txt
+++ b/src/ros2_practice/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.12)
 project(ros2_practice)
 
-set(CMAKE_CXX_STANDARD 17)
+# C++17の設定
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+endif()
 
+# 依存パッケージ
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
@@ -11,6 +16,7 @@ find_package(cv_bridge REQUIRED)
 find_package(image_transport REQUIRED)
 find_package(OpenCV REQUIRED COMPONENTS highgui imgproc objdetect)
 
+# face_detectionノードのビルド設定
 add_executable(face_detection src/face_detection.cpp)
 ament_target_dependencies(face_detection
   "cv_bridge"
@@ -23,6 +29,7 @@ target_link_libraries(face_detection
   opencv_imgproc
   opencv_objdetect
 )
+
 install(TARGETS
   face_detection
   DESTINATION lib/${PROJECT_NAME}
@@ -30,7 +37,7 @@ install(TARGETS
 
 install(DIRECTORY
   config
-  DESTINATION share/${PROJECT_NAME}/
+  DESTINATION share/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
