--- a/src/ros2_practice/package.xml
+++ b/src/ros2_practice/package.xml
@@ -13,10 +13,11 @@
 
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>libopencv-dev</depend>
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
-  <depend>OpenCV</depend>
-  <depend>perception_pcl</depend>
+  <depend>libpcl-all-dev</depend>
+  <depend>pcl_conversions</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
